# ipor-fusion.py

./: .env.example  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  COMMIT_CONVENTION.md  README.md  build.sh  check_vault.py  example.py  ipor_fusion_errors.csv  pylintrc.toml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  notify-slack.yml  python-build.yml  python-publish.yml  release.yml  report-slack.yml
src/ipor_fusion/: AccessManager.py  AnvilTestContainerStarter.py  AssetMapper.py  CheatingPlasmaVaultSystem.py  CheatingPlasmaVaultSystemFactory.py  ERC20.py  ExternalSystemsDataProvider.py  FuseMapper.py  FuseMappingLoader.py  PlasmaSystem.py  PlasmaVault.py  PlasmaVaultDataReader.py  PlasmaVaultSystemFactory.py  PriceOracleMiddleware.py  RewardsClaimManager.py  TransactionExecutor.py  WithdrawManager.py  __init__.py  addresses.py  contract_name_resolver.py  entry_cli.py  entry_mcp.py  errors.py  market_ids.py  markets.py  types.py
src/ipor_fusion/cli/: config.py  config_cmd.py  config_store.py  encryption.py  explorer.py  ipor_fusion_cli.py  logging_config.py  main.py  market_cmd.py  morpho_api.py  vault_cmd.py  vault_dep_graph.py  vault_fetcher.py  vault_health.py  vault_rendering.py  vault_substrate.py
src/ipor_fusion/cli/commands/: base.py  config.py  encrypt.py  init.py  registry.py  show.py  supply.py
src/ipor_fusion/config/: __init__.py  roles.py
src/ipor_fusion/core/: __init__.py  access.py  context.py  contract.py  erc20.py  fusion_factory.py  keeper.py  oracle.py  plasma_vault.py  rewards.py  rewards_manager.py  simulation.py  vault.py  withdraw.py  withdraw_manager.py
src/ipor_fusion/error/: UnsupportedAssetSymbol.py
src/ipor_fusion/fuse/: FluidInstadappSupplyFuse.py  MoonwellBorrowFuse.py  MoonwellEnableMarketFuse.py  MoonwellSupplyFuse.py  MorphoBlueBorrowFuse.py  MorphoBlueClaimFuse.py  MorphoBlueCollateralFuse.py  RamsesClaimFuse.py
src/ipor_fusion/fuses/: __init__.py  aave_v3.py  base.py  compound_v3.py  erc4626.py  euler_swap.py  euler_v2.py  events.py  fluid_instadapp.py  gearbox_v3.py  morpho.py  ramses_v2.py  uniswap_v3.py  universal.py
src/ipor_fusion/helpers/: Addresses.py  BalanceLogger.py
src/ipor_fusion/markets/: AaveV3Market.py  CompoundV3Market.py  FluidInstadappMarket.py  GearboxV3Market.py  MorphoMarket.py  RamsesV2Market.py  UniswapV3Market.py  UniversalMarket.py  aave_v3.py  base.py  compound_v3.py  erc4626.py  fluid_instadapp.py  gearbox_v3.py  morpho.py  ramses_v2.py  uniswap_v3.py  universal.py
src/ipor_fusion/markets/morpho/: Morpho.py
src/ipor_fusion/mcp/: models.py  server.py
src/ipor_fusion/readers/: __init__.py  aave_v3.py  compound_v3.py  lending_health.py  morpho.py  oracle_mapping.py  position_manager.py  ramses_v2.py  uniswap_v3.py
src/ipor_fusion/testing/: __init__.py  anvil.py  cheating.py
src/ipor_fusion_sdk/: VaultExecuteCallFactory.py
src/ipor_fusion_sdk/fuse/: Fuse.py  RamsesClaimFuse.py  UniswapV3CollectFuse.py  UniswapV3ModifyPositionFuse.py  UniswapV3NewPositionFuse.py  UniswapV3SwapFuse.py  UniversalTokenSwapperFuse.py
src/ipor_fusion_sdk/operation/: BaseOperation.py  DecreasePosition.py  IncreasePosition.py  NewPosition.py  OperationWithAmount.py  OperationWithTokenIds.py  Swap.py  Withdraw.py
tests/: UniswapV3UniversalRouter.py  _euler_v2.py  _simulate.py  addresses.py  anvil_container.py  conftest.py  constants.py  test_access_manager.py  test_borrow_aave_v3_mainnet.py  test_claim_morpho_rewards.py  test_cli.py  test_cli_commands.py  test_cli_config.py  test_cli_config_store.py  test_cli_explorer.py  test_cli_health_unpriceable_collateral.py  test_cli_health_unpriceable_substrate.py  test_cli_helpers.py  test_cli_init.py  test_cli_lending_health.py  test_cli_market_morpho_blue.py  test_cli_oracle_mapping.py  test_cli_role_accounts.py  test_cli_simple.py  test_cli_yaml.py  test_contract_encoder.py  test_contract_name_cache.py  test_encryption.py  test_erc20.py  test_execute_moonwell.py  test_execute_pilot_v3.py  test_execute_pilot_v4.py  test_execute_pilot_v4_ramses.py  test_execute_pilot_v4_uniswap.py  test_execute_pilot_v5_deposit.py  test_execute_pilot_v5_ramses.py  test_execute_pilot_v5_scheduled.py  test_execute_release_funds.py  test_flash_loan.py  test_fuse_encoding.py  (+43 more)
