[project]
name = "ipor-fusion"
version = "3.0.1"
description = "The IPOR Fusion SDK for Python"
authors = [
    { name = "Adam Mydlarz", email = "amydlarz@gmail.com" },
    { name = "rav", email = "rav@ipor.io" },
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = ["ethereum", "defi", "ipor", "plasma-vault", "evm", "web3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Natural Language :: English",
]
dependencies = [
    "eth-typing>=5.0.0,<6",
    "eth-abi>=5.1.0,<6",
    "web3>=7.7.0,<8",
]

[project.optional-dependencies]
cli = ["click>=8.0,<9", "requests>=2.31.0,<3", "pydantic>=2.10,<3"]
mcp = ["mcp[cli]>=1.0,<2", "click>=8.0,<9", "requests>=2.31.0,<3", "pydantic>=2.10,<3"]

[project.urls]
homepage = "https://ipor.io"
repository = "https://github.com/IPOR-Labs/ipor-fusion.py"
documentation = "https://docs.ipor.io/ipor-fusion/fusion-introduction"

[project.scripts]
fusion = "ipor_fusion.entry_cli:main"
fusion-mcp = "ipor_fusion.entry_mcp:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "python-dotenv>=1.0.1,<2",
    "pytest-xdist>=3.8.0,<4",
    "pytest-cov>=6.0,<7",
    "mypy>=1.19.1,<2",
    "black==24.8.0",
    "pylint==3.3.1",
]

# Transitional: the one piece Poetry still needs that uv/hatchling infer differently —
# the src-layout package location. Poetry 2.x reads everything else from [project] above.
# Removed in the "remove Poetry" commit.
[tool.poetry]
packages = [{ include = "ipor_fusion", from = "src" }]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
unstable = false

[tool.pylint]
config-file = "pylintrc.toml"

[tool.coverage.run]
source = ["src/ipor_fusion"]
data_file = ".coverage_data/.coverage"
omit = ["src/ipor_fusion/mcp/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
omit = ["src/ipor_fusion/mcp/*"]

[tool.semantic_release]
build_command = "rm -rf dist/* && uv build"
logging_use_named_masks = true
commit_parser = "angular"
major_on_zero = true
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipor_fusion"]
